[package]
name = "wasm-container"
version = "0.1.0"
edition = "2021"

[dependencies]
wasmtime = "24.0"
wasmtime-wasi = "24.0"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
flate2 = "1.0"
sha256 = "1.5"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
bytes = "1.5"
tempfile = "3.8"
clap = { version = "4.5", features = ["derive"] }
uuid = { version = "1.10", features = ["v4"] }
dirs = "5.0"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "wasm-container"
path = "src/main.rs"

[[example]]
name = "hello-world"
path = "examples/hello-world.rs"

[profile.release]
lto = true
opt-level = 3